--- a/app/src/main/res/layout/excursion_list_item.xml
+++ b/app/src/main/res/layout/excursion_list_item.xml
@@ -9,26 +9,23 @@
         android:id="@+id/textView2"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_margin="2dp"
         android:background="@color/cardview_light_background"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.156"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.774" />
-
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_editor_absoluteX="149dp"
+        tools:layout_editor_absoluteY="196dp" />
     <TextView
         android:id="@+id/textView3"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:background="@color/cardview_light_background"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.156"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="2dp"
+        android:background="@color/cardview_light_background"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.213" />
+        app:layout_constraintLeft_toRightOf="@id/textView2"
+        tools:layout_editor_absoluteX="149dp"
+        tools:layout_editor_absoluteY="196dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
