Worked on Part 3e: Include an alert that the user can set which will trigger on the start and end date, displaying the vacation title and whether it is starting or ending.

--- a/app/src/main/res/menu/menu_vacationdetails.xml
+++ b/app/src/main/res/menu/menu_vacationdetails.xml
@@ -5,4 +5,7 @@
 
     <item android:title="Delete Vacation"
         android:id="@+id/vacationdelete"/>
+
+    <item android:title="Notify"
+        android:id="@+id/vacationnotify"/>
 </menu>
