Worked on Part 3f: Include sharing features so the user can share all the vacation details via email that automatically populates with the vaca details.

--- a/app/src/main/res/menu/menu_vacationdetails.xml
+++ b/app/src/main/res/menu/menu_vacationdetails.xml
@@ -8,4 +8,8 @@
 
     <item android:title="Notify"
         android:id="@+id/vacationnotify"/>
+
+    <item
+        android:id="@+id/shareemail"
+        android:title="Share via Email" />
 </menu>
