continued working on Part 3D: added the add excursion menu button and fixed functionality.

--- a/app/src/main/res/menu/menu_vacationdetails.xml
+++ b/app/src/main/res/menu/menu_vacationdetails.xml
@@ -12,4 +12,8 @@
     <item
         android:id="@+id/shareemail"
         android:title="Share via Email" />
+
+    <item
+        android:id="@+id/addexcursion"
+        android:title="Add Excursion" />
 </menu>
