--- a/app/src/main/res/menu/menu_vacation_list.xml
+++ b/app/src/main/res/menu/menu_vacation_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Add Sample Code" android:id="@+id/mysample"/>
-    <item android:title="Item" android:id="@+id/item"/>
+    <item android:title="Add Sample Vacation" android:id="@+id/mysample"/>
+    <item android:title="Add Vacation" android:id="@+id/addvacation"/>
 </menu>
