--- a/app/src/main/res/layout/activity_vacation_details.xml
+++ b/app/src/main/res/layout/activity_vacation_details.xml
@@ -47,7 +47,7 @@
                 <TextView
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:text="Vacation Price" />
+                    android:text="Vacation price" />
 
                 <EditText
                     android:id="@+id/vacationprice"
